# odoo_api_wrapper

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.py  example.py  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: api.html  index.html  model.html
docs/odoo_api_wrapper/: api.html  index.html
odoo_api_wrapper/: api.py  errors.py  logger.py  pyproject.toml  setup.cfg  tox.ini
odoo_api_wrapper/src/odoo_api_wrapper/: __init__.py  api.py  errors.py
odoo_api_wrapper/tests/: conftest.py  test_api.py
src/odoo_api_wrapper/: __init__.py  api.py  model.py
tests/: test_api.py  test_model.py
