[project]
name = "odoo_api_wrapper"
version = "0.2.2"
description = "A wrapper for Odoo's External API."
readme = "README.md"
keywords = ["odoo", "xml-rpc"]
license = { file = "LICENSE" }
requires-python = ">=3.9"

[project.urls]
Homepage = "https://orabiw.github.io/odoo_api_wrapper/"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
