[metadata]
name = odoo_api_wrapper
version = attr: odoo_api_wrapper.__version__
description = A wrapper for Odoo's External API
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2-Clause
project_urls =
    Houmepage = https://orabiw.github.io/odoo_api_wrapper/
    Source Code = https://github.com/orabiw/odoo_api_wrapper

[options]
packages = find:
python_requires = >= 3.7

[options.packages.find]
where=src
[tool:pytest]
testpaths = tests
filterwarnings = error

[coverage:run]
branch = True
command_line = -m pytest -x
source = src/odoo_api_wrapper/

[coverage:report]
show_missing = True
fail_under = 100

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
files = src/odoo_api_wrapper, tests
python_version = 3.7

[mypy-pytest.*]
ignore_missing_imports = True
